# valkyree

./: Cargo.toml  LICENSE  README.md  docker-compose.yaml  valkey-server.conf
docs/: supported-commands.md
docs/commands/: Auth.md  Decrement.md  DecrementBy.md  Delete.md  Exists.md  Expire.md  ExpireAt.md  ExpireTime.md  Get.md  Hello.md  Increment.md  IncrementBy.md  Keys.md  Ping.md  Raw.md  Set.md  Ttl.md
src/: lib.rs
src/builder/: error.rs  mod.rs  result.rs
src/builder/commands/: auth.rs  decrement.rs  decrement_by.rs  delete.rs  exists.rs  expire.rs  expire_at.rs  expire_time.rs  get.rs  hello.rs  increment.rs  increment_by.rs  keys.rs  mod.rs  ping.rs  raw.rs  set.rs  ttl.rs
src/builder/resp_data_type/: arrays.rs  big_numbers.rs  booleans.rs  bulk_errors.rs  bulk_strings.rs  doubles.rs  helpers.rs  integers.rs  maps.rs  mod.rs  nulls.rs  parser.rs  sets.rs  simple_errors.rs  simple_strings.rs  verbatim_strings.rs
src/transport/: client.rs  connection.rs  execute.rs  mod.rs
src/types/: command_kind.rs  error_kind.rs  expiry_kind.rs  mod.rs  resp_data_kind.rs  resp_data_type_iter.rs  resp_data_type_value.rs  resp_error_kind.rs  simple_error_kind.rs  value.rs  verbatim_encoding.rs
