[package]
name = "valkeyree"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
num-bigint = { version="0.4.6", features=["serde"] }
regex = "1.12.2"
serde = { version="1.0.228", features=["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros","test-util","net","io-util","sync"] }
