[package]
name = "valkeyree"
version = "0.1.6"
edition = "2024"
description = "An async Rust Valkyrie that speaks RESP — carrying your commands between realms of Valkey."
license = "MIT"
readme = "README.md"
repository = "https://github.com/j-p-d-e-v/valkyree"
categories = ["parsing", "network-programming", "database"]
keywords = ["valkey", "redis", "resp", "parser", "protocol"]

[dependencies]
anyhow = "1.0.100"
num-bigint = { version="0.4.6", features=["serde"] }
regex = "1.12.2"
serde = { version="1.0.228", features=["derive"] }
serde_json = "1.0.145"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.48.0", features = ["macros","test-util","net","io-util","sync"] }
